--- a/Portafolio Udemi/index.html
+++ b/Portafolio Udemi/index.html
@@ -98,7 +98,7 @@
         <p>&copy; 2024 Tania Arteaga. Loosely designed in Figma and coded in Visual Studio Code by yours truly.</p>
     </footer>
     <script type="module" src="js/main.js"></script>
-    <script src="assets/js/theme.js"></script>
+    <script src="js/utils/theme.js"></script>
 </body>
 
 </html>
