fix: update projects.html to use CSS animations

--- a/Portafolio Udemi/projects.html
+++ b/Portafolio Udemi/projects.html
@@ -4,9 +4,9 @@
 
 <script>
 function renderProjectItem(project, index) {
-    const aosEffect = index === 0 ? 'data-aos="fade-left" data-aos-duration="1000"' : index === 2 ? 'data-aos="fade-right" data-aos-duration="1000"' : '';
+    const animationClass = index === 0 ? 'animate-fade-left' : index === 2 ? 'animate-fade-right' : '';
     return `
-        <div class="projects__item" ${aosEffect}>
+        <div class="projects__item ${animationClass}">
             <div class="item__inner">
                 <div class="item__front">
                     <h4 class="item__title">${project.title}</h4>
@@ -39,10 +39,13 @@ async function loadProjects() {
         const projects = await response.json();
         const container = document.getElementById('projects-container');
         container.innerHTML = projects.map((project, index) => renderProjectItem(project, index)).join('');
-        // Reinitialize AOS
-        if (typeof AOS !== 'undefined') {
-            AOS.refresh();
-        }
+        // Trigger animations for loaded content
+        setTimeout(() => {
+            const animatedElements = container.querySelectorAll('[class*="animate-"]');
+            animatedElements.forEach(el => {
+                el.classList.add('animate');
+            });
+        }, 100);
     } catch (error) {
         console.error('Error loading projects:', error);
         document.getElementById('projects-container').innerHTML = '<p>Error loading projects.</p>';
