--- a/Portafolio Udemi/projects.html
+++ b/Portafolio Udemi/projects.html
@@ -3,54 +3,59 @@
 </div>
 
 <script>
-function renderProjectItem(project, index) {
-    const animationClass = index === 0 ? 'animate-fade-left' : index === 2 ? 'animate-fade-right' : '';
-    return `
+    function renderProjectItem(project, index) {
+        const animationClass = index === 0 ? 'animate-fade-left' : index === 2 ? 'animate-fade-right' : '';
+        return `
         <div class="projects__item ${animationClass}">
-            <div class="item__inner">
-                <div class="item__front">
-                    <h4 class="item__title">${project.title}</h4>
-                    <img src="${project.image}" alt="imagen proyecto">
-                    <div class="projects__skill">
-                        ${project.technologies.map(tech => {
-                            if (tech === 'PHP') return '<div class="skill__item"><i class="fab fa-php"></i></div>';
-                            if (tech === 'Database') return '<div class="skill__item"><i class="fa fa-database"></i></div>';
-                            if (tech === 'POO') return '<div class="skill__item"><p>POO</p></div>';
-                            if (tech === 'MVC') return '<div class="skill__item"><p>MVC</p></div>';
-                            if (tech === 'Laravel') return '<div class="skill__item"><i class="fab fa-laravel"></i></div>';
-                            if (tech === 'Bootstrap') return '<div class="skill__item"><i class="fab fa-bootstrap"></i></div>';
-                            if (tech === 'CSS') return '<div class="skill__item"><i class="fab fa-css3-alt"></i></div>';
-                            if (tech === 'HTML') return '<div class="skill__item"><i class="fab fa-html5"></i></div>';
-                            return `<div class="skill__item"><p>${tech}</p></div>`;
-                        }).join('')}
+            <div class="item__container">
+                <div class="item__inner">
+                    <div class="item__front">
+                        <img class="item__img" src="${project.frontImage}" alt="${project.title} front image">
+                    </div>
+                    <div class="item__back">
+                        <img class="item__img" src="${project.backImage}" alt="${project.title} back image">
                     </div>
                 </div>
-                <div class="item__back">
+                <div class="item__details">
+                    <h4 class="item__title">${project.title}</h4>
                     <p class="item__text">${project.description}</p>
+                    <div class="projects__skill">
+                        ${project.technologies.map(tech => {
+            if (tech === 'PHP') return '<div class="skill__item"><i class="fab fa-php"></i></div>';
+            if (tech === 'Database') return '<div class="skill__item"><i class="fa fa-database"></i></div>';
+            if (tech === 'POO') return '<div class="skill__item"><p>POO</p></div>';
+            if (tech === 'MVC') return '<div class="skill__item"><p>MVC</p></div>';
+            if (tech === 'Laravel') return '<div class="skill__item"><i class="fab fa-laravel"></i></div>';
+            if (tech === 'Bootstrap') return '<div class="skill__item"><i class="fab fa-bootstrap"></i></div>';
+            if (tech === 'CSS') return '<div class="skill__item"><i class="fab fa-css3-alt"></i></div>';
+            if (tech === 'HTML') return '<div class="skill__item"><i class="fab fa-html5"></i></div>';
+            return `<div class="skill__item"><p>${tech}</p></div>`;
+        }).join('')}
+                    </div>
                 </div>
             </div>
         </div>
     `;
-}
-
-async function loadProjects() {
-    try {
-        const response = await fetch('data/projects.json');
-        const projects = await response.json();
-        const container = document.getElementById('projects-container');
-        container.innerHTML = projects.map((project, index) => renderProjectItem(project, index)).join('');
-        // Trigger animations for loaded content
-        setTimeout(() => {
-            const animatedElements = container.querySelectorAll('[class*="animate-"]');
-            animatedElements.forEach(el => {
-                el.classList.add('animate');
-            });
-        }, 100);
-    } catch (error) {
-        console.error('Error loading projects:', error);
-        document.getElementById('projects-container').innerHTML = '<p>Error loading projects.</p>';
     }
-}
 
-document.addEventListener('DOMContentLoaded', loadProjects);
+    async function loadProjects() {
+        try {
+            const response = await fetch('data/projects.json');
+            const projects = await response.json();
+            const container = document.getElementById('projects-container');
+            container.innerHTML = projects.map((project, index) => renderProjectItem(project, index)).join('');
+            // Trigger animations for loaded content
+            setTimeout(() => {
+                const animatedElements = container.querySelectorAll('[class*="animate-"]');
+                animatedElements.forEach(el => {
+                    el.classList.add('animate');
+                });
+            }, 100);
+        } catch (error) {
+            console.error('Error loading projects:', error);
+            document.getElementById('projects-container').innerHTML = '<p>Error loading projects.</p>';
+        }
+    }
+
+    document.addEventListener('DOMContentLoaded', loadProjects);
 </script>
