feat: convert projects section to standalone HTML page without SPA

--- a/Portafolio Udemi/index.html
+++ b/Portafolio Udemi/index.html
@@ -60,9 +60,9 @@
                         <li class="menu__option">
                             <a class="menu__link" data-route="skills" href="#skills">Sobre mí</a>
                         </li>
-                        <li class="menu__option">
-                            <a class="menu__link" data-route="projects" href="#projects">Proyectos</a>
-                        </li>
+                         <li class="menu__option">
+                             <a class="menu__link" href="projects.html">Proyectos</a>
+                         </li>
                         <li class="menu__option">
                             <a class="menu__link" data-route="studies" href="#studies">Estudios</a>
                         </li>
