--- a/Portafolio Udemi/projects.html
+++ b/Portafolio Udemi/projects.html
@@ -5,14 +5,14 @@
 <script>
     const projects = [
         {
-            id: "obi-tienda",
-            title: "Obi tienda online",
-            description: "Aplicación web para gestionar y personalizar tu experiencia de compra en una tienda online. Explora los productos más populares, tus artículos favoritos, el historial de tus compras recientes y detalles específicos de cada producto. Crea y guarda nuevas listas de deseos recomendadas basadas en tus intereses y compras anteriores.",
-            github: "https://github.com/tania/obi-tienda",
-            demo: "https://taniaarteaga.dev/obi-tienda",
+            id: "SuperM",
+            title: "SuperM – Tienda Online",
+            description: "Aplicación web moderna de e-commerce desarrollada con React 19 y Vite. Incluye autenticación de usuarios con Supabase, exploración dinámica de productos, carrito de compras persistente con Context API + localStorage y un proceso de pago optimizado con un diseño responsivo, priorizando el rendimiento y la experiencia de usuario.",
+            github: "https://github.com/tavcoder/SuperM",
+            demo: "https://super-m-orcin.vercel.app/",
             frontImage: "assets/img/imgPlaceholder.jpg",
             backImage: "assets/img/imgPlaceholder.jpg",
-            technologies: ["PHP", "Database", "POO", "MVC"]
+            technologies: ["React", "Vite", "Supabase"]
         },
         {
             id: "cuidarnos",
@@ -41,30 +41,28 @@
         return `
         <div class="projects__item ${animationClass}">
             <div class="item__container">
-                <div class="item__card">
+                <div class="item__details">
+                    <h4 class="item__title">${project.title}</h4>
+                    <p class="item__text">${project.description}</p>
+                    <div class="projects__skill">
+                        ${project.technologies.map(tech => {
+                          if (tech === 'React') return '<div class="skill__item"><i class="fab fa-react"></i></div>';
+                          if (tech === 'Supabase') return '<div class="skill__item"><img src="assets/icons/supabase-logo-wordmark--light.svg" alt="Supabase"></div>';
+                          if (tech === 'Node') return '<div class="skill__item"><i class="fab fa-node-js"></i></div>';
+                          if (tech === 'Express') return '<div class="skill__item"><span>Express</span></div>';
+                          if (tech === 'JavaScript') return '<div class="skill__item"><i class="fab fa-js"></i></div>';
+                          if (tech === 'Vite') return '<div class="skill__item"><img src="assets/icons/vite.svg" alt="Vite"></div>';
+                          return `<div class="skill__item"><p>${tech}</p></div>`;
+                        }).join('')}
+                   </div>
+                </div>
+                 <div class="item__card">
                     <div class="item__front">
                         <img class="item__img" src="${project.frontImage}" alt="${project.title} front image">
                     </div>
                     <div class="item__back">
                         <img class="item__img" src="${project.backImage}" alt="${project.title} back image">
                     </div>
-                </div>
-                <div class="item__details">
-                    <h4 class="item__title">${project.title}</h4>
-                    <p class="item__text">${project.description}</p>
-                    <div class="projects__skill">
-                        ${project.technologies.map(tech => {
-                           if (tech === 'PHP') return '<div class="skill__item"><i class="fab fa-php"></i></div>';
-                           if (tech === 'Database') return '<div class="skill__item"><i class="fa fa-database"></i></div>';
-                           if (tech === 'POO') return '<div class="skill__item"><p>POO</p></div>';
-                           if (tech === 'MVC') return '<div class="skill__item"><p>MVC</p></div>';
-                           if (tech === 'Laravel') return '<div class="skill__item"><i class="fab fa-laravel"></i></div>';
-                           if (tech === 'Bootstrap') return '<div class="skill__item"><i class="fab fa-bootstrap"></i></div>';
-                           if (tech === 'CSS') return '<div class="skill__item"><i class="fab fa-css3-alt"></i></div>';
-                           if (tech === 'HTML') return '<div class="skill__item"><i class="fab fa-html5"></i></div>';
-                           return `<div class="skill__item"><p>${tech}</p></div>`;
-                        }).join('')}
-                   </div>
                 </div>
             </div>
         </div>
