--- a/Portafolio Udemi/index.html
+++ b/Portafolio Udemi/index.html
@@ -35,7 +35,7 @@
                 <div class="user-info__general">
                     <div class="user-info__container-image">
                         <a href="index.html">
-                            <img class="user-info__image" src="assets/img/profile.jpg" alt="Profile Picture">
+                            <img class="user-info__image" src="assets/img/imgPlaceholder.jpg" alt="Profile Picture">
                         </a>
                     </div>
 
