refactor: rename button classes for consistency - menu__link to tertiaryBtn, btn__email to secondaryBtn, btn__cv to primaryBtn

--- a/Portafolio Udemi/index.html
+++ b/Portafolio Udemi/index.html
@@ -55,16 +55,16 @@
                 <nav class="aside__menu">
                     <ul class="menu__list">
                         <li class="menu__option">
-                            <a class="menu__link active" data-route="" href="#">Inicio</a>
+                            <a class="tertiaryBtn active" data-route="" href="#">Inicio</a>
                         </li>
                         <li class="menu__option">
-                            <a class="menu__link" data-route="skills" href="#skills">Sobre mí</a>
+                            <a class="tertiaryBtn" data-route="skills" href="#skills">Sobre mí</a>
                         </li>
                         <li class="menu__option">
-                            <a class="menu__link" data-route="projects" href="#projects">Proyectos</a>
+                            <a class="tertiaryBtn" data-route="projects" href="#projects">Proyectos</a>
                         </li>
                         <li class="menu__option">
-                            <a class="menu__link" data-route="studies" href="#studies">Estudios</a>
+                            <a class="tertiaryBtn" data-route="studies" href="#studies">Estudios</a>
                         </li>
                     </ul>
                 </nav>
