refactor: update component classes and CSS for consistent section heights and styling

--- a/Portafolio Udemi/index.html
+++ b/Portafolio Udemi/index.html
@@ -86,7 +86,7 @@
 
         <!-- Contenido principal -->
         <main class="layout__content">
-            <div id="content__page"></div>
+            <div id="content__page" class="content__page"></div>
         </main>
     </div>
     <!-- Footer -->
