style: continue polishing site styles and responsiveness

--- a/Portafolio Udemi/index.html
+++ b/Portafolio Udemi/index.html
@@ -9,6 +9,7 @@
     <!-- Hoja de estilos -->
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/responsive.css">
     <link id="theme-stylesheet" rel="stylesheet" href="assets/css/light.css">
 
     <!-- Enlace para Font Awesome -->
@@ -57,16 +58,16 @@
                 <nav class="aside__menu">
                     <ul class="menu__list">
                         <li class="menu__option">
-                            <a class=" tertiaryBtn active" data-route="" href="#">Inicio</a>
+                            <a class=" btn tertiaryBtn active" data-route="" href="#">Inicio</a>
                         </li>
                         <li class="menu__option">
-                            <a class=" tertiaryBtn" data-route="skills" href="#skills">Sobre mí</a>
+                            <a class=" btn tertiaryBtn" data-route="skills" href="#skills">Sobre mí</a>
                         </li>
                         <li class="menu__option">
-                            <a class=" tertiaryBtn" data-route="projects" href="#projects">Proyectos</a>
+                            <a class=" btn tertiaryBtn" data-route="projects" href="#projects">Proyectos</a>
                         </li>
                         <li class="menu__option">
-                            <a class=" tertiaryBtn" data-route="studies" href="#studies">Estudios</a>
+                            <a class=" btn tertiaryBtn" data-route="studies" href="#studies">Estudios</a>
                         </li>
                     </ul>
                 </nav>
