--- a/Portafolio Udemi/index.html
+++ b/Portafolio Udemi/index.html
@@ -22,6 +22,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
         rel="stylesheet">
+    <!-- Iconos -->
+    <script src="https://code.iconify.design/3/3.1.0/iconify.min.js"></script>
+
 
 </head>
 
@@ -31,33 +34,39 @@
 
         <!-- Sidebar (info del usuario)-->
         <aside class="layout__aside">
-            <div class="wrapper">
-                <svg viewBox="0 0 300 300" width="300" height="300">
-                    <defs>
-                        <!-- Degradado más profundo -->
-                        <linearGradient id="degradadoHundoIntenso" x1="0" y1="0" x2="0" y2="1">
-                            <stop offset="0%" stop-color=" #e0e5ec" />
-                            <stop offset="50%" stop-color=" #e0e5ec" />
-                            <stop offset="100%" stop-color=" #e0e5ec" />
-                        </linearGradient>
+            <div class="toggle-container">
+                <input type="checkbox" class="toggle-input">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 292 142" class="toggle">
 
-                        <!-- Sombra interna más intensa -->
-                        <filter id="inset-shadow-intenso" x="-50%" y="-50%" width="200%" height="200%">
-                            <feOffset dx="0" dy="3" />
-                            <feGaussianBlur stdDeviation="4" result="offset-blur" />
-                            <feComposite operator="out" in="SourceGraphic" in2="offset-blur" result="inverse" />
-                            <feFlood flood-color="black" flood-opacity="0.5" result="color" />
-                            <feComposite operator="in" in="color" in2="inverse" result="shadow" />
-                            <feComposite operator="over" in="shadow" in2="SourceGraphic" />
-                        </filter>
-                    </defs>
+                    <path
+                        d="M71 142C31.7878 142 0 110.212 0 71C0 31.7878 31.7878 0 71 0C110.212 0 119 30 146 30C173 30 182 0 221 0C260 0 292 31.7878 292 71C292 110.212 260.212 142 221 142C181.788 142 173 112 146 112C119 112 110.212 142 71 142Z"
+                        class="toggle-background">
+                    </path>
 
-                    <path d="M 56 130 Q 65 185 105 202" fill="none" stroke="url(#degradadoHundoIntenso)"
-                        stroke-width="10" stroke-linecap="round" filter="url(#inset-shadow-intenso)" />
+                    <!-- Texto ES (modo OFF) -->
+                    <text x="75" y="15" class="toggle-text es">ES</text>
+
+                    <!-- Texto EN (modo ON) -->
+                    <text x="175" y="-85" class="toggle-text en">EN</text>
+
+                    <g filter="url('#goo')">
+                        <rect fill="#fff" rx="29" height="58" width="116" y="42" x="13" class="toggle-circle-center">
+                        </rect>
+                        <rect fill="#fff" rx="58" height="114" width="114" y="14" x="14" class="toggle-circle left">
+                        </rect>
+                        <rect fill="#fff" rx="58" height="114" width="114" y="14" x="164" class="toggle-circle right">
+                        </rect>
+                    </g>
+
+                    <filter id="goo">
+                        <feGaussianBlur stdDeviation="10" result="blur" in="SourceGraphic"></feGaussianBlur>
+                        <feColorMatrix result="goo" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7" mode="matrix"
+                            in="blur">
+                        </feColorMatrix>
+                    </filter>
                 </svg>
-                <div class="dot"></div>
             </div>
-            <button class="buttons__language">Es</button>
+
             <section class="aside__user-info">
                 <!--Información general usuario-->
                 <div class="user-info__general">
@@ -97,6 +106,32 @@
                     </ul>
                 </nav>
             </section>
+            <div class="wrapper">
+                <svg viewBox="0 0 300 300" width="300" height="300">
+                    <defs>
+                        <!-- Degradado más profundo -->
+                        <linearGradient id="degradadoHundoIntenso" x1="0" y1="0" x2="0" y2="1">
+                            <stop offset="0%" stop-color=" #e0e5ec" />
+                            <stop offset="50%" stop-color=" #e0e5ec" />
+                            <stop offset="100%" stop-color=" #e0e5ec" />
+                        </linearGradient>
+
+                        <!-- Sombra interna más intensa -->
+                        <filter id="inset-shadow-intenso" x="-50%" y="-50%" width="200%" height="200%">
+                            <feOffset dx="0" dy="3" />
+                            <feGaussianBlur stdDeviation="4" result="offset-blur" />
+                            <feComposite operator="out" in="SourceGraphic" in2="offset-blur" result="inverse" />
+                            <feFlood flood-color="black" flood-opacity="0.5" result="color" />
+                            <feComposite operator="in" in="color" in2="inverse" result="shadow" />
+                            <feComposite operator="over" in="shadow" in2="SourceGraphic" />
+                        </filter>
+                    </defs>
+
+                    <path d="M 56 130 Q 65 185 105 202" fill="none" stroke="url(#degradadoHundoIntenso)"
+                        stroke-width="10" stroke-linecap="round" filter="url(#inset-shadow-intenso)" />
+                </svg>
+                <div class="dot"></div>
+            </div>
         </aside>
 
         <!-- Contenido principal -->
@@ -108,6 +143,7 @@
     <footer>
         <p>&copy; 2024 Tania Arteaga. Loosely designed in Figma and coded in Visual Studio Code by yours truly.</p>
     </footer>
+    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
     <script type="module" src="js/main.js"></script>
     <script src="js/utils/theme.js"></script>
 </body>
