feat(projectTemplate): continue enhancing features section with radio buttons and fix selection bug                                                                                                                           ┃
     • Add animated icons to project links (back, demo, code) using Iconify
     • Update theme toggle to interactive checkbox with slider dot animation
     • Adjust positioning and styling for better UX in project section

--- a/Portafolio Udemi/index.html
+++ b/Portafolio Udemi/index.html
@@ -106,7 +106,7 @@
                     </ul>
                 </nav>
             </section>
-            <div class="wrapper">
+            <div class="aside__theme">
                 <svg viewBox="0 0 300 300" width="300" height="300">
                     <defs>
                         <!-- Degradado más profundo -->
@@ -130,7 +130,10 @@
                     <path d="M 56 130 Q 65 185 105 202" fill="none" stroke="url(#degradadoHundoIntenso)"
                         stroke-width="10" stroke-linecap="round" filter="url(#inset-shadow-intenso)" />
                 </svg>
-                <div class="dot"></div>
+
+                <input type="checkbox" class="switch__input">
+                <span class="slider__dot"></span>>
+
             </div>
         </aside>
 
@@ -143,7 +146,6 @@
     <footer>
         <p>&copy; 2024 Tania Arteaga. Loosely designed in Figma and coded in Visual Studio Code by yours truly.</p>
     </footer>
-    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
     <script type="module" src="js/main.js"></script>
     <script src="js/utils/theme.js"></script>
 </body>
