feat(theme): improve light/dark mode toggle behavior

--- a/Portafolio Udemi/index.html
+++ b/Portafolio Udemi/index.html
@@ -106,7 +106,7 @@
                     </ul>
                 </nav>
             </section>
-            <div class="aside__theme">
+            <div class="wrapper">
                 <svg viewBox="0 0 300 300" width="300" height="300">
                     <defs>
                         <!-- Degradado más profundo -->
@@ -131,8 +131,7 @@
                         stroke-width="10" stroke-linecap="round" filter="url(#inset-shadow-intenso)" />
                 </svg>
 
-                <input type="checkbox" class="switch__input">
-                <span class="slider__dot"></span>>
+                <div class="dot btn"></div>
 
             </div>
         </aside>
