feat(tokens)!: complete design token system implementation
BREAKING CHANGE: Full tokenization of design system with 7 new token categories

- Add spacing, typography, radius, z-index, transitions, and sizing tokens
- Create decorative color category for UI ornaments
- Remove 10 unused primitive tokens
- Update all components to use semantic tokens
- Optimize dark mode to only override semantic layer
- Achieve zero hardcoded values in stylesheets

--- a/Portafolio Udemi/index.html
+++ b/Portafolio Udemi/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
-    <link id="theme-stylesheet" rel="stylesheet" href="assets/css/light.css">
+    <link id="theme-stylesheet" rel="stylesheet" href="assets/css/theme.css">
 
     <!-- Enlace para Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -44,13 +44,13 @@
                     </path>
 
                     <g filter="url('#goo')">
-                        <rect fill="var(--bg-button-primary)" rx="29" height="58" width="116" y="42" x="13"
+                        <rect fill="var(--color-background-button)" rx="29" height="58" width="116" y="42" x="13"
                             class="toggle-circle-center">
                         </rect>
-                        <rect fill="var(--bg-button-primary)" rx="58" height="114" width="114" y="14" x="14"
+                        <rect fill="var(--color-background-button)" rx="58" height="114" width="114" y="14" x="14"
                             class="toggle-circle left">
                         </rect>
-                        <rect fill="var(--bg-button-primary)" rx="58" height="114" width="114" y="14" x="164"
+                        <rect fill="var(--color-background-button)" rx="58" height="114" width="114" y="14" x="164"
                             class="toggle-circle right">
                         </rect>
 
@@ -129,10 +129,12 @@
                         stroke-width="10" stroke-linecap="round" filter="url(#inset-shadow-intenso)" />
 
                     <!-- Texto EN en el extremo izquierdo -->
-                    <text x="56" y="110" font-size="10" font-weight="bold" fill="var(--text-button)" text-anchor="middle">EN</text>
+                    <text x="56" y="110" font-size="10" font-weight="bold" fill="var(--color-text-button)"
+                        text-anchor="middle">EN</text>
 
                     <!-- Texto ES en el extremo derecho -->
-                    <text x="125" y="210" font-size="10" font-weight="bold" fill="var(--text-button)" text-anchor="middle">ES</text>
+                    <text x="125" y="210" font-size="10" font-weight="bold" fill="var(--color-text-button)"
+                        text-anchor="middle">ES</text>
                 </svg>
 
                 <div class="dot btn"></div>
